--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                      <tr style="padding:0px">
                         <td style="padding:2.5%;width:63%;vertical-align:middle">
                            <p style="text-align:center">
-                              <name>Subhadeep Koley <font size="+0.5">(শুভদীপ)</font>
+                              <name>Tapas Kumar DUtta <font size="+0.5">(শুভদীপ)</font>
                               </name>
                            </p>
                            <p style="text-align:justify">
