--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
                         <td style="width:60%;vertical-align:middle">
                            <h1 style="text-align:center">Tapas Kumar Dutta</h1>
                            <p align="justify">
-                              I am a Master's student at the <strong>University of Surrey</strong>, specializing in <strong>Computer Vision, Robotics, and Machine Learning</strong>. 
-                              Currently, I am working on my thesis at the <a href="http://sketchx.eecs.qmul.ac.uk/">SketchX Lab</a> titled <em>"SketchFusion: Learning Universal Sketch Features through Fusing Foundation Models"</em>, submitted to CVPR 2025.
+                              I am a Master's student at the <strong>University of Surrey</strong>, where I have been working on my thesis at the <a href="http://sketchx.eecs.qmul.ac.uk/">SketchX Lab</a> under the supervision of .
                            </p>
                            <p align="justify">
                               Previously, I obtained my <strong>B.Tech in Information Technology</strong> from <strong>Indian Institute of Engineering Science and Technology</strong>.
