--- a/index.html
+++ b/index.html
@@ -23,11 +23,19 @@
                         <td style="width:60%;vertical-align:middle">
                            <h1 style="text-align:center">Tapas Kumar Dutta</h1>
                            <p align="justify">
-                              I am a Master's student at the <strong>University of Surrey</strong>, where I have been working on my thesis at the <a href="http://sketchx.eecs.qmul.ac.uk/">SketchX Lab</a> under the supervision of .
+                              I am a Master's student at the <strong>University of Surrey</strong>, where I have been working on my thesis at the <a href="http://sketchx.eecs.qmul.ac.uk/">SketchX Lab</a> under the supervision of <a href="https://subhadeepkoley.github.io//">Subhadeep Koley</a> and <a href="https://www.surrey.ac.uk/people/yi-zhe-song">Professor Yi-Zhe Song</a>.
                            </p>
                            <p align="justify">
-                              Previously, I obtained my <strong>B.Tech in Information Technology</strong> from <strong>Indian Institute of Engineering Science and Technology</strong>.
+                              I'm also a Data Scientist at <a href="https://www.nhs.uk/">National Health Service</a>.
                            </p>
+
+                           <p align="justify">
+                           Prior to this, I worked as a Deep Learning Engineer at 2Sigma School , specializing in Langchain, Retrieval-Augmented Generation, PDFs Parser.
+                           <p>
+                           <p align="justify">
+                           Prior to that, I was involved in research in various institues such as <a href="https://bagcilab.com/">Bagci Lab</a> and <a href="https://opencv.org/">OpenCV</a>.
+                           <p>
+                              
                            <p style="text-align:center">
                               <a href="mailto:tapasduttatom13@gmail.com"><i class="fas fa-envelope"></i> Email</a> &nbsp/&nbsp
                               <a href="https://www.linkedin.com/in/tapas-dutta-89a858184/"><i class="fab fa-linkedin"></i> LinkedIn</a> &nbsp/&nbsp
