--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                            Prior to this, I worked as a Deep Learning Engineer at 2Sigma School , specializing in Langchain, Retrieval-Augmented Generation, PDFs Parser.
                            <p>
                            <p align="justify">
-                           Prior to that, I was involved in research in various institues such as <a href="https://bagcilab.com/">Bagci Lab</a>, <a href="https://opencv.org/">OpenCV</a>, <a href="https://team.inria.fr/stars/en//">INRIA, STARS Team</a> etc.
+                           Prior to that, I was involved in research in various institues such as <a href="https://opencv.org/">OpenCV</a>, <a href="https://bagcilab.com/">Bagci Lab</a>, <a href="https://team.inria.fr/stars/en//">INRIA, STARS Team</a> etc.
                            <p>
                               
                            <p style="text-align:center">
