--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
                   style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
                   <tbody>
                      <td align="middle">
-                        <img src='images/sketchCLIP.png' width="160">
+                        <img src='images/SAM_Mamba.png' width="160">
                      </td>
                      <td style="padding:10px;width:75%;vertical-align:middle">
                         <a href="https://arxiv.org/abs/2407.01810">
-                           <papertitle>Freeview Sketching: View-Aware Fine-Grained Sketch-Based Image Retrieval
+                           <papertitle>SAM-Mamba: Mamba Guided SAM Architecture for Generalized Zero-Shot Polyp Segmentation
                            </papertitle> <a class="button" style="color:#FFFFFF"><strong style="font-size:12px"> New!
                               </strong></a>
                         </a>
                         <br>
-                        A. Sain, PN. Chowdhury, <strong>S. Koley</strong>, AK. Bhunia, Y-Z. Song
+                        <strong>T. K. Dutta</strong>strong>, S. Majhi, D. R. Nayak, D. Jha
                         <br>
-                        <em>In Proc. European Conference on Computer Vision <strong>( ECCV
+                        <em>In Proc. IEEE/CVF Winter Conference on Applications of Computer Vision <strong>( WACV
                               )</strong>, 2024</em>
                         <br>
-                        <a href="https://arxiv.org/pdf/2407.01810">[PDF]</a>
+                        <a href="https://arxiv.org/abs/2412.08482">[PDF]</a>
                         /
                         <a
-                           href="https://raw.githubusercontent.com/subhadeepkoley/subhadeepkoley.github.io/main/data/sain2024freeview.bib">[BibTeX]</a>
+                           href="https://github.com/TapasKumarDutta1/SAM_Mamba_2025">[BibTeX]</a>
                         /
-                        <a href="https://arxiv.org/abs/2407.01810">[arXiv]</a>
+                        <a href="https://arxiv.org/abs/2412.08482">[arXiv]</a>
                         /
-                        <a href="">[Project Page]</a>
+                        <a href="https://github.com/TapasKumarDutta1/SAM_Mamba_2025">[Project Page]</a>
                         /
                         <a href="">[Video]</a>
                         <br>
