--- a/index.html
+++ b/index.html
@@ -79,7 +79,39 @@
                         <br>
                      </td>
                   </tbody>
-               </table>   
+               </table>
+
+               
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
+                  <tbody>
+                     <td align="middle">
+                        <img src='images/GT-Net.png' width="160">
+                     </td>
+                     <td style="padding:10px;width:75%;vertical-align:middle">
+                        <a href="https://link.springer.com/article/10.1007/s13534-024-00393-0">
+                           <papertitle>GT-Net: global transformer network for multiclass brain tumor classification using MR images
+                           </papertitle> 
+                        </a>
+                        <br>
+                        <strong>T. K. Dutta</strong>strong>, D. R. Nayak, R.M. Pachori
+                        <br>
+                        <em>In Biomedical Engineering Letters, 2024</em>
+                        <br>
+                        <a href="https://link.springer.com/article/10.1007/s13534-024-00393-0">[PDF]</a>
+                        /
+                        <a
+                           href="">[BibTeX]</a>
+                        /
+                        <a href="https://link.springer.com/article/10.1007/s13534-024-00393-0">[arXiv]</a>
+                        /
+                        <a href="https://github.com/TapasKumarDutta1/GT-Net">[Project Page]</a>
+                        /
+                        <a href="">[Video]</a>
+                        <br>
+                     </td>
+                  </tbody>
+               </table>
 
                
             </td>
