--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                               </strong></a>
                         </a>
                         <br>
-                        <strong>T. K. Dutta</strong>strong>, S. Majhi, D. R. Nayak, D. Jha
+                        <strong>T. K. Dutta</strong>, S. Majhi, D. R. Nayak, D. Jha
                         <br>
                         <em>In Proc. IEEE/CVF Winter Conference on Applications of Computer Vision <strong>( WACV
                               )</strong>, 2024</em>
@@ -94,7 +94,7 @@
                            </papertitle> 
                         </a>
                         <br>
-                        <strong>T. K. Dutta</strong>strong>, D. R. Nayak, R.M. Pachori
+                        <strong>T. K. Dutta</strong>, D. R. Nayak, R.M. Pachori
                         <br>
                         <em>In Biomedical Engineering Letters, 2024</em>
                         <br>
