--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                      </tr>
                   </tbody>
                </table>
-                     <p style="text-align:center">
-                              <a href="mailto:tapasduttatom13@gmail.com"><i class="fas fa-envelope"></i> Email</a> &nbsp/&nbsp
-                              <a href="https://www.linkedin.com/in/tapas-dutta-89a858184/"><i class="fab fa-linkedin"></i> LinkedIn</a> &nbsp/&nbsp
-                              <a href="https://github.com/TapasKumarDutta1"><i class="fab fa-github"></i> GitHub</a> &nbsp/&nbsp
-                              <a href="https://scholar.google.com/citations?user=6h4w80EAAAAJ&hl=en"><i class="ai ai-google-scholar"></i> Google Scholar</a>
+                     <p align="justify">
+                              <a href="mailto:tapasduttatom13@gmail.com"><font size="3"><span><i class="fas fa-envelope"></i> Email</a> &nbsp/&nbsp
+                              <a href="https://www.linkedin.com/in/tapas-dutta-89a858184/"><font size="3"><span><i class="fab fa-linkedin"></i> LinkedIn</a> &nbsp/&nbsp
+                              <a href="https://github.com/TapasKumarDutta1"><font size="3"><span><i class="fab fa-github"></i> GitHub</a> &nbsp/&nbsp
+                              <a href="https://scholar.google.com/citations?user=6h4w80EAAAAJ&hl=en"><font size="3"><span><i class="ai ai-google-scholar"></i> Google Scholar</a>
                            </p>
                <h2>Research Interests</h2>
                <p align="justify">My research focuses on Deep Learning, particularly in Medical Imaging and Foundation Models. I have worked on AI-driven diagnosis tools, X-ray classification, and sketch understanding with foundation models.</p>
