--- a/index.html
+++ b/index.html
@@ -50,7 +50,21 @@
                            </p>
                <h2>Research Interests</h2>
                <p align="justify">My research focuses on Deep Learning, particularly in Medical Imaging and Foundation Models. I have worked on AI-driven diagnosis tools, X-ray classification, and sketch understanding with foundation models.</p>
-          
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-bottom:0px;margin-top:0px;">
+                  <tbody>
+                     <tr>
+                        <td style="padding:20px;width:100%;vertical-align:middle;margin-bottom:0px;margin-top:0px;">
+                           <heading>
+                              <font size="5">Selected Publications</font>
+                           </heading>
+                           <p><strong>
+                                 <font size="5">2024</font>
+                              </strong></p>
+                        </td>
+                     </tr>
+                  </tbody>
+               </table>
                <table
                   style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
                   <tbody>
