--- a/index.html
+++ b/index.html
@@ -48,8 +48,22 @@
                               <a href="https://github.com/TapasKumarDutta1"><font size="3"><span><i class="fab fa-github"></i> GitHub</a> &nbsp/&nbsp
                               <a href="https://scholar.google.com/citations?user=6h4w80EAAAAJ&hl=en"><font size="3"><span><i class="ai ai-google-scholar"></i> Google Scholar</a>
                            </p>
-               <h2>Research Interests</h2>
-               <p align="justify">My research focuses on Deep Learning, particularly in Medical Imaging and Foundation Models. I have worked on AI-driven diagnosis tools, X-ray classification, and sketch understanding with foundation models.</p>
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top: 0px;">
+                  <tbody>
+                     <tr>
+                        <td style="padding:20px;width:100%;vertical-align:middle;margin-top: 0px;">
+                           <heading>
+                              <font size="5">Research Interests</font>
+                           </heading>
+                           <p align="justify">
+                              <font size="3">
+                                 My research focuses on Deep Learning, particularly in Medical Imaging and Foundation Models. I have worked on AI-driven diagnosis tools, X-ray classification, and sketch understanding with foundation models.
+                           </p>
+                        </td>
+                     </tr>
+                  </tbody>
+               </table>
                <table
                   style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-bottom:0px;margin-top:0px;">
                   <tbody>
