--- a/index.html
+++ b/index.html
@@ -42,12 +42,20 @@
                      </tr>
                   </tbody>
                </table>
-                     <p align="justify">
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top: 0px;">
+                  <tbody>
+                     <tr>
+                        <td style="padding:20px;width:100%;vertical-align:middle;margin-top: 0px;">
+                           <p align="justify">
                               <a href="mailto:tapasduttatom13@gmail.com"><font size="3"><span><i class="fas fa-envelope"></i> Email</a> &nbsp/&nbsp
                               <a href="https://www.linkedin.com/in/tapas-dutta-89a858184/"><font size="3"><span><i class="fab fa-linkedin"></i> LinkedIn</a> &nbsp/&nbsp
                               <a href="https://github.com/TapasKumarDutta1"><font size="3"><span><i class="fab fa-github"></i> GitHub</a> &nbsp/&nbsp
                               <a href="https://scholar.google.com/citations?user=6h4w80EAAAAJ&hl=en"><font size="3"><span><i class="ai ai-google-scholar"></i> Google Scholar</a>
                            </p>
+                     </tr>
+                  </tbody>
+               </table>
                <table
                   style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top: 0px;">
                   <tbody>
