--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-   <table style="width:100%;max-width:1000px;margin:auto;">
+   <table
+      style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-bottom: 0px;margin-top: 0px;">
       <tbody>
          <tr>
             <td>
@@ -42,6 +43,10 @@
                      </tr>
                   </tbody>
                </table>
+
+
+
+               
                <table
                   style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top: 0px;">
                   <tbody>
