--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
             <td>
                <table style="width:100%;margin:auto;">
                   <tbody>
-                     <tr>
-                        <td style="width:60%;vertical-align:middle">
-                           <h1 style="text-align:center">Tapas Kumar Dutta</h1>
+                     <tr style="padding:0px">
+                        <td style="padding:2.5%;width:63%;vertical-align:middle">
+                           <p style="text-align:center">
+                              <name>Tapas Kumar Dutta
+                              </name>
                            <p align="justify">
                               I am a Master's student at the <strong>University of Surrey</strong>, where I have been working on my thesis at the <a href="http://sketchx.eecs.qmul.ac.uk/">SketchX Lab</a> under the supervision of <a href="https://subhadeepkoley.github.io//">Subhadeep Koley</a> and <a href="https://www.surrey.ac.uk/people/yi-zhe-song">Professor Yi-Zhe Song</a>.
                            </p>
