--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                               <a href="https://www.linkedin.com/in/tapas-dutta-89a858184/"><font size="3"><span><i class="fab fa-linkedin"></i> LinkedIn</a> &nbsp/&nbsp
                               <a href="https://github.com/TapasKumarDutta1"><font size="3"><span><i class="fab fa-github"></i> GitHub</a> &nbsp/&nbsp
                               <a href="https://scholar.google.com/citations?user=6h4w80EAAAAJ&hl=en"><font size="3"><span><i class="ai ai-google-scholar"></i> Google Scholar</a>
+                              <a href="https://scholar.google.co.in/citations?user=-mOrpz8AAAAJ&hl=en"><font size="3"><span><i class="ai ai-google-scholar"></i></span> Google Scholar</a>
+                                       </font>
                            </p>
                      </tr>
                   </tbody>
