--- a/index.html
+++ b/index.html
@@ -161,6 +161,40 @@
                   </tbody>
                </table>
 
+
+   
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
+                  <tbody>
+                     <td align="middle">
+                        <img src='images/ARMNet.png' width="160">
+                     </td>
+                     <td style="padding:10px;width:75%;vertical-align:middle">
+                        <a href="https://www.sciencedirect.com/science/article/pii/S1746809423008546">
+                           <papertitle>ARM-Net: Attention-guided residual multiscale CNN for multiclass brain tumor classification using MR images
+                           </papertitle> 
+                        </a>
+                        <br>
+                        <strong>T. K. Dutta</strong>, D. R. Nayak, Y.D. Zhang
+                        <br>
+                        <em>In Biomedical Signal Processing and Control, 2024</em>
+                        <br>
+                        <a href="https://www.sciencedirect.com/science/article/pii/S1746809423008546">[PDF]</a>
+                        /
+                        <a
+                           href="">[BibTeX]</a>
+                        /
+                        <a href="https://www.sciencedirect.com/science/article/pii/S1746809423008546">[arXiv]</a>
+                        /
+                        <a href="https://github.com/TapasKumarDutta1/ARM-Net">[Project Page]</a>
+                        /
+                        <a href="">[Video]</a>
+                        <br>
+                     </td>
+                  </tbody>
+               </table>
+   
+
                
             </td>
          </tr>
