--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                   style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
                   <tbody>
                      <td align="middle">
-                        <img src='images/ARMNet.png' width="160">
+                        <img src='images/ARMNet1.png' width="160">
                      </td>
                      <td style="padding:10px;width:75%;vertical-align:middle">
                         <a href="https://www.sciencedirect.com/science/article/pii/S1746809423008546">
