--- a/index.html
+++ b/index.html
@@ -193,6 +193,39 @@
                      </td>
                   </tbody>
                </table>
+
+   
+   
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
+                  <tbody>
+                     <td align="middle">
+                        <img src='images/CDANet.png' width="160">
+                     </td>
+                     <td style="padding:10px;width:75%;vertical-align:middle">
+                        <a href="https://ieeexplore.ieee.org/abstract/document/9897799">
+                           <papertitle>CDANet: Channel split dual attention based CNN for brain tumor classification in MR images
+                           </papertitle> 
+                        </a>
+                        <br>
+                        <strong>T. K. Dutta</strong>, D. R. Nayak, 
+                        <br>
+                        <em>In 2022 IEEE international conference on image processing <strong>ICIP</strong></em>
+                        <br>
+                        <a href="https://ieeexplore.ieee.org/abstract/document/9897799">[PDF]</a>
+                        /
+                        <a
+                           href="">[BibTeX]</a>
+                        /
+                        <a href="https://ieeexplore.ieee.org/abstract/document/9897799">[arXiv]</a>
+                        /
+                        <a href="https://github.com/TapasKumarDutta1/CDANet">[Project Page]</a>
+                        /
+                        <a href="">[Video]</a>
+                        <br>
+                     </td>
+                  </tbody>
+               </table>
    
 
                
