--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                               I am a Master's student at the <strong>University of Surrey</strong>, where I have been working on my thesis at the <a href="http://sketchx.eecs.qmul.ac.uk/">SketchX Lab</a> under the supervision of <a href="https://subhadeepkoley.github.io//">Subhadeep Koley</a> and <a href="https://www.surrey.ac.uk/people/yi-zhe-song">Professor Yi-Zhe Song</a>.
                            </p>
                            <p align="justify">
-                              I'm also a Data Scientist at <a href="https://www.nhs.uk/">National Health Service</a>.
+                              I'm also a Data Scientist at <a href="https://www.nhs.uk/">National Health Service</a> alongside research in institues in<a href="https://www.epsom-sthelier.nhs.uk/swleoc//">SWLEOC</a>, <a href="https://bagcilab.com/">Bagci Lab</a> and <a href="https://team.inria.fr/stars/en//">INRIA, STARS Team</a>.
                            </p>
 
                            <p align="justify">
                            Prior to this, I worked as a Deep Learning Engineer at 2Sigma School , specializing in Langchain, Retrieval-Augmented Generation, PDFs Parser.
                            <p>
                            <p align="justify">
-                           Prior to that, I was involved in research in various institues such as <a href="https://www.epsom-sthelier.nhs.uk/swleoc//">SWLEOC</a>, <a href="https://opencv.org/">OpenCV</a>, <a href="https://bagcilab.com/">Bagci Lab</a> and <a href="https://team.inria.fr/stars/en//">INRIA, STARS Team</a>
+                           Prior to that, I was involved in research in <a href="https://opencv.org/">OpenCV</a> and  
                            <p>
                         </td>
                         <td style="width:40%">
