--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" type="text/css" href="stylesheet.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.1/css/academicons.min.css">
-   <link rel="icon" type="image/png" href="images/icon.png">
+   <link rel="icon" type="image/png" href="images/profile.jpeg">
 </head>
 
 <body>
@@ -41,7 +41,7 @@
                            <p>
                         </td>
                         <td style="width:40%">
-                           <img style="width:100%" src="images/profile.png" alt="Tapas Kumar Dutta">
+                           <img style="width:100%" src="images/profile.jpeg" alt="Tapas Kumar Dutta">
                         </td>
                      </tr>
                   </tbody>
