--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                      <tr>
                         <td style="padding:20px;width:100%;vertical-align:middle;margin-bottom:0px;margin-top:0px;">
                            <heading>
-                              <font size="5">Selected Publications</font>
+                              <font size="5">Research</font>
                            </heading>
                         </td>
                      </tr>
