--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+
    <table
       style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-bottom: 0px;margin-top: 0px;">
       <tbody>
@@ -50,8 +51,8 @@
                   style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top: 0px;">
                   <tbody>
                      <tr>
-                     <td style="padding:20px 0px;width:100%;vertical-align:middle;"> 
-                           <p align="justify" style="margin-top: -5px; margin-bottom: 5px;"> 
+                        <td style="padding:20px;width:100%;vertical-align:middle;margin-top: 0px;">
+                           <p align="justify">
                               <a href="mailto:tapasduttatom13@gmail.com"><font size="3"><span><i class="fas fa-envelope"></i></span> Email</font></a> &nbsp/&nbsp
                               <a href="https://www.linkedin.com/in/tapas-dutta-89a858184/"><font size="3"><span><i class="fab fa-linkedin"></i></span> LinkedIn</font></a> &nbsp/&nbsp
                               <a href="https://github.com/TapasKumarDutta1"><font size="3"><span><i class="fab fa-github"></i></span> GitHub</font></a> &nbsp/&nbsp
@@ -61,11 +62,12 @@
                      </tr>
                   </tbody>
                </table>
+
                <table
                   style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top: 0px;">
                   <tbody>
                      <tr>
-                        <td style="padding:20px;width:100%;vertical-align:middle;margin-top: 0px;">
+                        <td style="padding:0px;width:100%;vertical-align:middle;margin-top: 0px;">
                            <heading>
                               <font size="5">Research Interests</font>
                            </heading>
