--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html lang="en">
 
@@ -11,191 +12,219 @@
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.1/css/academicons.min.css">
    <link rel="icon" type="image/png" href="images/icon.png">
-   <style>
-      /* Centering tables and adjusting margins */
-      table {
-         width: 100%;
-         max-width: 1000px;
-         margin: 0 auto;
-         border-collapse: separate;
-         border-spacing: 0;
-      }
-
-      /* Ensuring the profile image doesn't exceed container width */
-      .profile-img {
-         width: 100%;
-         max-width: 300px; /* You can adjust the max width */
-         height: auto;
-      }
-
-      /* Styling for the email, LinkedIn, GitHub section */
-      .social-links {
-         text-align: center;
-         margin-top: -10px;
-      }
-
-      .social-links a {
-         font-size: 16px;
-         margin: 0 10px;
-      }
-
-      /* Aligning and styling headings */
-      heading {
-         text-align: center;
-         margin-top: 20px;
-      }
-
-      papertitle {
-         font-size: 18px;
-         font-weight: bold;
-      }
-
-      /* Table for research papers */
-      .research-table {
-         background-color: #ffffff;
-         margin-bottom: 20px;
-         padding: 10px;
-      }
-
-      .research-table td {
-         vertical-align: middle;
-         padding: 10px;
-      }
-
-      .research-table img {
-         width: 160px;
-         height: auto;
-         display: block;
-         margin: 0 auto;
-      }
-
-      .research-table a {
-         color: #007bff;
-      }
-   </style>
 </head>
 
 <body>
 
-   <table>
+   <table
+      style="width:100%;max-width:1000px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-bottom: 0px;margin-top: 0px;">
       <tbody>
          <tr>
             <td>
-               <table>
+               <table style="width:100%;margin:auto;">
                   <tbody>
-                     <tr>
-                        <td style="width: 63%; vertical-align: middle; padding: 2.5%">
-                           <p style="text-align: center">
-                              <strong>Tapas Kumar Dutta</strong>
-                           </p>
+                     <tr style="padding:0px">
+                        <td style="padding:2.5%;width:63%;vertical-align:middle">
+                           <p style="text-align:center">
+                              <name>Tapas Kumar Dutta
+                              </name>
                            <p align="justify">
                               I am a Master's student at the <strong>University of Surrey</strong>, where I have been working on my thesis at the <a href="http://sketchx.eecs.qmul.ac.uk/">SketchX Lab</a> under the supervision of <a href="https://subhadeepkoley.github.io//">Subhadeep Koley</a> and <a href="https://www.surrey.ac.uk/people/yi-zhe-song">Professor Yi-Zhe Song</a>.
                            </p>
                            <p align="justify">
                               I'm also a Data Scientist at <a href="https://www.nhs.uk/">National Health Service</a> while collaborating with <a href="https://www.epsom-sthelier.nhs.uk/swleoc//">SWLEOC</a>, <a href="https://bagcilab.com/">Bagci Lab</a> and <a href="https://team.inria.fr/stars/en//">INRIA, STARS Team</a> on research project.
                            </p>
-                           <p align="justify">
-                              Prior to this, I worked as a Deep Learning Engineer at 2Sigma School, specializing in Langchain, Retrieval-Augmented Generation, PDFs Parser.
-                           </p>
-                           <p align="justify">
-                              Prior to that, I was involved in research in <a href="https://opencv.org/">OpenCV</a> and Multi-national AI & Research (Germany, Japan, UK, India, US).
-                           </p>
-                        </td>
-                        <td style="width: 40%; text-align: center">
-                           <img class="profile-img" src="images/profile.png" alt="Tapas Kumar Dutta">
-                        </td>
-                     </tr>
-                  </tbody>
-               </table>
 
-               <table class="social-links">
-                  <tbody>
-                     <tr>
-                        <td>
+                           <p align="justify">
+                           Prior to this, I worked as a Deep Learning Engineer at 2Sigma School , specializing in Langchain, Retrieval-Augmented Generation, PDFs Parser.
                            <p>
-                              <a href="mailto:tapasduttatom13@gmail.com"><span><i class="fas fa-envelope"></i></span> Email</a> &nbsp;/&nbsp
-                              <a href="https://www.linkedin.com/in/tapas-dutta-89a858184/"><span><i class="fab fa-linkedin"></i></span> LinkedIn</a> &nbsp;/&nbsp
-                              <a href="https://github.com/TapasKumarDutta1"><span><i class="fab fa-github"></i></span> GitHub</a> &nbsp;/&nbsp
-                              <a href="https://scholar.google.com/citations?user=6h4w80EAAAAJ&hl=en"><span><i class="ai ai-google-scholar"></i></span> Google Scholar</a>
-                           </p>
-                        </td>
-                     </tr>
-                  </tbody>
-               </table>
-
-               <table>
-                  <tbody>
-                     <tr>
-                        <td>
-                           <h3 style="text-align: center;">Research Interests</h3>
                            <p align="justify">
-                              My research focuses on Deep Learning, particularly in Medical Imaging and Foundation Models. I have worked on AI-driven diagnosis tools, X-ray classification, and sketch understanding with foundation models.
+                           Prior to that, I was involved in research in <a href="https://opencv.org/">OpenCV</a> and Multi-national AI & Research (Germany, Japan, UK, India, US).
+                           <p>
+                        </td>
+                        <td style="width:40%">
+                           <img style="width:100%" src="images/profile.png" alt="Tapas Kumar Dutta">
+                        </td>
+                     </tr>
+                  </tbody>
+               </table>
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top: -50px;">
+                  <tbody>
+                     <tr>
+                        <td style="padding:20px;width:100%;vertical-align:middle;margin-top: -10px;">
+                           <p align="justify">
+                              <a href="mailto:tapasduttatom13@gmail.com"><font size="3"><span><i class="fas fa-envelope"></i></span> Email</font></a> &nbsp/&nbsp
+                              <a href="https://www.linkedin.com/in/tapas-dutta-89a858184/"><font size="3"><span><i class="fab fa-linkedin"></i></span> LinkedIn</font></a> &nbsp/&nbsp
+                              <a href="https://github.com/TapasKumarDutta1"><font size="3"><span><i class="fab fa-github"></i></span> GitHub</font></a> &nbsp/&nbsp
+                              <a href="https://scholar.google.com/citations?user=6h4w80EAAAAJ&hl=en"><font size="3"><span><i class="ai ai-google-scholar"></i></span> Google Scholar</font></a>
+                                       </font>
+                           </p>
+                     </tr>
+                  </tbody>
+               </table>
+
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top: 0px;">
+                  <tbody>
+                     <tr>
+                        <td style="padding:20px;width:100%;vertical-align:middle;margin-top: 0px;">
+                           <heading>
+                              <font size="5">Research Interests</font>
+                           </heading>
+                           <p align="justify">
+                              <font size="3">
+                                 My research focuses on Deep Learning, particularly in Medical Imaging and Foundation Models. I have worked on AI-driven diagnosis tools, X-ray classification, and sketch understanding with foundation models.
                            </p>
                         </td>
                      </tr>
                   </tbody>
                </table>
-
-               <table>
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-bottom:0px;margin-top:0px;">
                   <tbody>
                      <tr>
-                        <td>
-                           <h3 style="text-align: center;">Research</h3>
+                        <td style="padding:20px;width:100%;vertical-align:middle;margin-bottom:0px;margin-top:0px;">
+                           <heading>
+                              <font size="5">Research</font>
+                           </heading>
                         </td>
                      </tr>
                   </tbody>
                </table>
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
+                  <tbody>
+                     <td align="middle">
+                        <img src='images/SAM_Mamba.png' width="160">
+                     </td>
+                     <td style="padding:10px;width:75%;vertical-align:middle">
+                        <a href="https://arxiv.org/abs/2407.01810">
+                           <papertitle>SAM-Mamba: Mamba Guided SAM Architecture for Generalized Zero-Shot Polyp Segmentation
+                           </papertitle> <a class="button" style="color:#FFFFFF"><strong style="font-size:12px"> New!
+                              </strong></a>
+                        </a>
+                        <br>
+                        <strong>T. K. Dutta</strong>, S. Majhi, D. R. Nayak, D. Jha
+                        <br>
+                        <em>In Proc. IEEE/CVF Winter Conference on Applications of Computer Vision <strong>( WACV
+                              )</strong>, 2024</em>
+                        <br>
+                        <a href="https://arxiv.org/abs/2412.08482">[PDF]</a>
+                        /
+                        <a
+                           href="https://github.com/TapasKumarDutta1/SAM_Mamba_2025">[BibTeX]</a>
+                        /
+                        <a href="https://arxiv.org/abs/2412.08482">[arXiv]</a>
+                        /
+                        <a href="https://github.com/TapasKumarDutta1/SAM_Mamba_2025">[Project Page]</a>
+                        /
+                        <a href="">[Video]</a>
+                        <br>
+                     </td>
+                  </tbody>
+               </table>
 
-               <div class="research-table">
-                  <table>
-                     <tr>
-                        <td align="center">
-                           <img src='images/SAM_Mamba.png'>
-                        </td>
-                        <td style="width: 75%; padding: 10px; vertical-align: middle;">
-                           <a href="https://arxiv.org/abs/2407.01810">
-                              <papertitle>SAM-Mamba: Mamba Guided SAM Architecture for Generalized Zero-Shot Polyp Segmentation</papertitle>
-                           </a>
-                           <strong>T. K. Dutta</strong>, S. Majhi, D. R. Nayak, D. Jha
-                           <br>
-                           <em>In Proc. IEEE/CVF Winter Conference on Applications of Computer Vision <strong>(WACV)</strong>, 2024</em>
-                           <br>
-                           <a href="https://arxiv.org/abs/2412.08482">[PDF]</a> /
-                           <a href="https://github.com/TapasKumarDutta1/SAM_Mamba_2025">[BibTeX]</a> /
-                           <a href="https://arxiv.org/abs/2412.08482">[arXiv]</a> /
-                           <a href="https://github.com/TapasKumarDutta1/SAM_Mamba_2025">[Project Page]</a> /
-                           <a href="">[Video]</a>
-                        </td>
-                     </tr>
-                  </table>
-               </div>
+               
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
+                  <tbody>
+                     <td align="middle">
+                        <img src='images/GT-Net.png' width="160">
+                     </td>
+                     <td style="padding:10px;width:75%;vertical-align:middle">
+                        <a href="https://link.springer.com/article/10.1007/s13534-024-00393-0">
+                           <papertitle>GT-Net: global transformer network for multiclass brain tumor classification using MR images
+                           </papertitle> 
+                        </a>
+                        <br>
+                        <strong>T. K. Dutta</strong>, D. R. Nayak, R.M. Pachori
+                        <br>
+                        <em>In Biomedical Engineering Letters, 2024</em>
+                        <br>
+                        <a href="https://link.springer.com/article/10.1007/s13534-024-00393-0">[PDF]</a>
+                        /
+                        <a
+                           href="">[BibTeX]</a>
+                        /
+                        <a href="https://link.springer.com/article/10.1007/s13534-024-00393-0">[arXiv]</a>
+                        /
+                        <a href="https://github.com/TapasKumarDutta1/GT-Net">[Project Page]</a>
+                        /
+                        <a href="">[Video]</a>
+                        <br>
+                     </td>
+                  </tbody>
+               </table>
 
-               <div class="research-table">
-                  <table>
-                     <tr>
-                        <td align="center">
-                           <img src='images/GT-Net.png'>
-                        </td>
-                        <td style="width: 75%; padding: 10px; vertical-align: middle;">
-                           <a href="https://link.springer.com/article/10.1007/s13534-024-00393-0">
-                              <papertitle>GT-Net: Global Transformer Network for Multiclass Brain Tumor Classification Using MR Images</papertitle>
-                           </a>
-                           <strong>T. K. Dutta</strong>, D. R. Nayak, R. M. Pachori
-                           <br>
-                           <em>In Biomedical Engineering Letters, 2024</em>
-                           <br>
-                           <a href="https://link.springer.com/article/10.1007/s13534-024-00393-0">[PDF]</a> /
-                           <a href="">[BibTeX]</a> /
-                           <a href="https://link.springer.com/article/10.1007/s13534-024-00393-0">[arXiv]</a> /
-                           <a href="https://github.com/TapasKumarDutta1/GT-Net">[Project Page]</a> /
-                           <a href="">[Video]</a>
-                        </td>
-                     </tr>
-                  </table>
-               </div>
 
-               <!-- Continue for other research papers -->
+   
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
+                  <tbody>
+                     <td align="middle">
+                        <img src='images/ARMNet1.png' width="160">
+                     </td>
+                     <td style="padding:10px;width:75%;vertical-align:middle">
+                        <a href="https://www.sciencedirect.com/science/article/pii/S1746809423008546">
+                           <papertitle>ARM-Net: Attention-guided residual multiscale CNN for multiclass brain tumor classification using MR images
+                           </papertitle> 
+                        </a>
+                        <br>
+                        <strong>T. K. Dutta</strong>, D. R. Nayak, Y.D. Zhang
+                        <br>
+                        <em>In Biomedical Signal Processing and Control, 2024</em>
+                        <br>
+                        <a href="https://www.sciencedirect.com/science/article/pii/S1746809423008546">[PDF]</a>
+                        /
+                        <a
+                           href="">[BibTeX]</a>
+                        /
+                        <a href="https://www.sciencedirect.com/science/article/pii/S1746809423008546">[arXiv]</a>
+                        /
+                        <a href="https://github.com/TapasKumarDutta1/ARM-Net">[Project Page]</a>
+                        /
+                        <a href="">[Video]</a>
+                        <br>
+                     </td>
+                  </tbody>
+               </table>
 
+   
+   
+               <table
+                  style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:0px;background-color:#ffffff">
+                  <tbody>
+                     <td align="middle">
+                        <img src='images/CDANet.png' width="160">
+                     </td>
+                     <td style="padding:10px;width:75%;vertical-align:middle">
+                        <a href="https://ieeexplore.ieee.org/abstract/document/9897799">
+                           <papertitle>CDANet: Channel split dual attention based CNN for brain tumor classification in MR images
+                           </papertitle> 
+                        </a>
+                        <br>
+                        <strong>T. K. Dutta</strong>, D. R. Nayak, 
+                        <br>
+                        <em>In 2022 IEEE international conference on image processing <strong>ICIP</strong></em>
+                        <br>
+                        <a href="https://ieeexplore.ieee.org/abstract/document/9897799">[PDF]</a>
+                        /
+                        <a
+                           href="">[BibTeX]</a>
+                        /
+                        <a href="https://ieeexplore.ieee.org/abstract/document/9897799">[arXiv]</a>
+                        /
+                        <a href="https://github.com/TapasKumarDutta1/CDANet">[Project Page]</a>
+                        /
+                        <a href="">[Video]</a>
+                        <br>
+                     </td>
+                  </tbody>
+               </table>
+   
+
+               
             </td>
          </tr>
       </tbody>
