--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;margin-top: -50px;">
                   <tbody>
                      <tr>
-                        <td style="padding:20px;width:100%;vertical-align:middle;margin-top: -10px;">
+                        <td style="padding:20px;width:100%;vertical-align:middle;margin-left:auto;margin-top: -10px;">
                            <p align="justify">
                               <a href="mailto:tapasduttatom13@gmail.com"><font size="3"><span><i class="fas fa-envelope"></i></span> Email</font></a> &nbsp/&nbsp
                               <a href="https://www.linkedin.com/in/tapas-dutta-89a858184/"><font size="3"><span><i class="fab fa-linkedin"></i></span> LinkedIn</font></a> &nbsp/&nbsp
