--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <link rel="stylesheet" type="text/css" href="stylesheet.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/academicons/1.9.1/css/academicons.min.css">
-   <link rel="icon" type="image/png" href="images/icon.png">
+   <link rel="icon" type="image/png" href="images/icon1.png">
 </head>
 
 <body>
