--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                            Prior to this, I worked as a Deep Learning Engineer at 2Sigma School , specializing in Langchain, Retrieval-Augmented Generation, PDFs Parser.
                            <p>
                            <p align="justify">
-                           Prior to that, I was involved in research in <a href="https://opencv.org/">OpenCV</a> and Multi-national AI & Research (US, UK, Germany, Japan, India).
+                           Prior to that, I was involved in research in <a href="https://opencv.org/">OpenCV</a> and Multi-national AI & Research (US, UK, France, Germany, Japan and India).
                            <p>
                         </td>
                         <td style="width:40%">
