--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                            </papertitle> 
                         </a>
                         <br>
-                        <strong>T. K. Dutta</strong>, D. R. Nayak, 
+                        <strong>T. K. Dutta</strong>, D. R. Nayak 
                         <br>
                         <em>In 2022 IEEE international conference on image processing <strong>ICIP</strong></em>
                         <br>
