--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                               <a href="mailto:tapasduttatom13@gmail.com"><font size="3"><span><i class="fas fa-envelope"></i></span> Email</font></a> &nbsp/&nbsp
                               <a href="https://www.linkedin.com/in/tapas-dutta-89a858184/"><font size="3"><span><i class="fab fa-linkedin"></i></span> LinkedIn</font></a> &nbsp/&nbsp
                               <a href="https://github.com/TapasKumarDutta1"><font size="3"><span><i class="fab fa-github"></i></span> GitHub</font></a> &nbsp/&nbsp
+                              <a href="https://www.kaggle.com/tapaskd123"><font size="3"><span><i class="fab fa-kaggle"></i></span> Kaggle</font></a>&nbsp/&nbsp
                               <a href="https://scholar.google.com/citations?user=6h4w80EAAAAJ&hl=en"><font size="3"><span><i class="ai ai-google-scholar"></i></span> Google Scholar</font></a>
                                        </font>
                            </p>
